<resources>
    <string name="app_name">Nick的美食App</string>
    <string name="luzhou_district">蘆洲區</string>
    <string name="sanchong_district">三重區</string>
    <string name="xinzhuang_district">新莊區</string>
    <string name="linkou_district">林口區</string>
    <string name="wugu_district">五股區</string>
    <string name="beitou_district">北投區</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>